[gd_scene load_steps=11 format=1]

[ext_resource path="res://Scripts/PlatformSteven.gd" type="Script" id=1]
[ext_resource path="res://Textures/Sprites/LIKOVI/steven.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 40, 20 )

[sub_resource type="Animation" id=2]

resource/name = "frozen"
length = 0.5
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 3, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.717647, 0.952941, 1, 1 ), Color( 0.717647, 0.952941, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]

length = 0.5
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.06, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 3, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.06, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.717647, 0.952941, 1, 1 ), Color( 0.717647, 0.952941, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]

length = 3.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1, 2 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]

length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=6]

resource/name = "unfreeze"
length = 0.8
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.8 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 3, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.2, 0.8 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.717647, 0.952941, 1, 1 ), Color( 0.717647, 0.952941, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 44, 21 )

[sub_resource type="RectangleShape2D" id=8]

custom_solver_bias = 0.0
extents = Vector2( 40, 20 )

[node name="PlatSteven" type="KinematicBody2D" groups=[
"Platforms",
]]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )
platform_speed = 50
direction = 1

[node name="AnimationPlayerSteven" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/frozen = SubResource( 2 )
anims/hit = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/nothing = SubResource( 5 )
anims/unfreeze = SubResource( 6 )
next/hit = "frozen"
next/unfreeze = "idle"
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )
vframes = 4
frame = 3
modulate = Color( 0.717647, 0.952941, 1, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

visibility/visible = false
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Label" type="Label" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -30.0
margin/top = -6.0
margin/right = 33.0
margin/bottom = 8.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "X: 0 ,  Y: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Area2D" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 7 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 3
collision/mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

shape = SubResource( 7 )
trigger = false
_update_shape_index = 0

[node name="KinematicBody2D" type="KinematicBody2D" parent="." groups=[
"Platforms",
]]

input/pickable = false
shapes/0/shape = SubResource( 8 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 2
collision/mask = 2
collision/margin = 0.08

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]

shape = SubResource( 8 )
trigger = false
_update_shape_index = 0

[connection signal="body_enter" from="Area2D" to="." method="_on_Area2D_body_enter"]

[connection signal="body_exit" from="Area2D" to="." method="_on_Area2D_body_exit"]


